tests/neg-macros/i11386.check

-- Error: tests/neg-macros/i11386/Test_2.scala:6:10 --------------------------------------------------------------------
6 |    dummy(0) // error
  |          ^
  |          test
  |---------------------------------------------------------------------------------------------------------------------
  |Inline stack trace
  |- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
  |This location contains code that was inlined from Test_2.scala:6
7 |    notNull(i)
  |    ^^^^^^^^^^
   ---------------------------------------------------------------------------------------------------------------------
-- Error: tests/neg-macros/i11386/Test_2.scala:8:20 --------------------------------------------------------------------
8 |    dummy(int2String(0)) // error
  |          ^^^^^^^^^^^^^
  |          test
  |---------------------------------------------------------------------------------------------------------------------
  |Inline stack trace
  |- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
  |This location contains code that was inlined from Test_2.scala:8
7 |    notNull(i)
  |    ^^^^^^^^^^
   ---------------------------------------------------------------------------------------------------------------------
